--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="HEINS : I/O-Hardware for the Internet of Things" />
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>HEINS by heins</title>
+    <title>HEINS</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>HEINS</h1>
-        <h2>I/O-Hardware for the Internet of Things</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/heins/website">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/heins/website/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/heins/website/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/heins/website" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">HEINS</h1>
+          <h2 id="project_tagline">I/O-Hardware for the Internet of Things</h2>
 
-    <div class="container">
-      <section id="main_content">
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/heins/website/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/heins/website/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="the-easy-way-to-get-real-world-data-into-your-computer" class="anchor" href="#the-easy-way-to-get-real-world-data-into-your-computer"><span class="octicon octicon-link"></span></a>The easy way to get real world data into your computer</h1>
 
@@ -58,6 +61,15 @@
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">HEINS maintained by <a href="https://github.com/heins">heins</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
