--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="HEINS : I/O-Hardware for the Internet of Things" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>HEINS by heins</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>HEINS</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/heins/website">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/heins/website/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/heins/website/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/heins/website">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">HEINS</h1>
-          <h2 id="project_tagline">I/O-Hardware for the Internet of Things</h2>
+      <section>
+        <div id="title">
+          <h1>HEINS</h1>
+          <p>I/O-Hardware for the Internet of Things</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/heins">heins</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/heins/website/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/heins/website/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <h1>
 <a name="the-easy-way-to-get-real-world-data-into-your-computer" class="anchor" href="#the-easy-way-to-get-real-world-data-into-your-computer"><span class="octicon octicon-link"></span></a>The easy way to get real world data into your computer</h1>
 
@@ -59,17 +66,9 @@
 <li><p>Power supply 24 VDC, DC-Jack oder industrial terminal connectors</p></li>
 </ul>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">HEINS maintained by <a href="https://github.com/heins">heins</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
