Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         </div>
 
         <h1>
-<a name="the-easy-way-to-get-real-world-data-into-your-computer" class="anchor" href="#the-easy-way-to-get-real-world-data-into-your-computer"><span class="octicon octicon-link"></span></a>The easy way to get real world data into your computer</h1>
+<a name="the-easy-way-to-get-real-world-data-into-your-app" class="anchor" href="#the-easy-way-to-get-real-world-data-into-your-app"><span class="octicon octicon-link"></span></a>The easy way to get real world data into your app</h1>
 
 <h2>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting started</h2>
 
 <ol>
 <li>Plug your sensor wires into HEINS</li>
-<li>Connect HEINS to your computer.</li>
+<li>Connect HEINS over Ethernet to your computer.</li>
 <li>Power on</li>
 <li>Send a REST-API-request or subscribe to the HEINS internal MQ-Server</li>
 </ol><p>Done! Now you can start creating your own awesome app!</p>
@@ -57,7 +57,7 @@
 <p>HEINS - Small I/O-Device under Open Hardware licence </p>
 
 <ul>
-<li>to allocate up to 10 digital or analog signals, voltage level 0...24 VDC</li>
+<li><p>to allocate up to 10 digital or analog signals, voltage level from 0 V up to 24 VDC</p></li>
 <li><p>Industrial terminal connectors</p></li>
 <li><p>to get these data from HEINS into your computer over a REST-API</p></li>
 <li><p>to subscribe these data from the HEINS internal MQ-Server with the MQTT-protocol</p></li>
