--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
 <ul>
 <li><p>to allocate up to 10 digital or analog signals, voltage level from 0 V up to 24 VDC</p></li>
-<li><p>Industrial terminal connectors</p></li>
+<li><p>Industrial terminal connectors for each sensor, power supply included (signal, Vcc and GND)</p></li>
 <li><p>to get these data from HEINS into your computer over a REST-API</p></li>
 <li><p>to subscribe these data from the HEINS internal MQ-Server with the MQTT-protocol</p></li>
 <li><p>to send these data from HEINS to an external MQ-Server, i.e. cloud service</p></li>
 <li><p>to connect to a network over LAN-Terminal (RJ45) over Ethernet/IP</p></li>
-<li><p>Power supply 24 VDC, DC-Jack oder industrial terminal connectors</p></li>
+<li><p>Power supply 24 VDC, DC-Jack or industrial terminal connectors</p></li>
 </ul>
       </section>
 
