--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <h1>
 <a name="the-easy-way-to-get-real-world-data-into-your-app" class="anchor" href="#the-easy-way-to-get-real-world-data-into-your-app"><span class="octicon octicon-link"></span></a>The easy way to get real world data into your app</h1>
 
+<h1></h1>
+
 <h2>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting started</h2>
 
@@ -64,7 +66,8 @@
 <li><p>to send these data from HEINS to an external MQ-Server, i.e. cloud service</p></li>
 <li><p>to connect to a network over LAN-Terminal (RJ45) over Ethernet/IP</p></li>
 <li><p>Power supply 24 VDC, DC-Jack or industrial terminal connectors</p></li>
-</ul>
+</ul><h2>
+<a name="stay-tuned" class="anchor" href="#stay-tuned"><span class="octicon octicon-link"></span></a>Stay tuned!</h2>
       </section>
 
     </div>
