Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
         <h1>
 <a name="the-easy-way-to-get-real-world-data-into-your-app" class="anchor" href="#the-easy-way-to-get-real-world-data-into-your-app"><span class="octicon octicon-link"></span></a>The easy way to get real world data into your app</h1>
 
-<h1></h1>
-
 <h2>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting started</h2>
 
@@ -62,9 +60,9 @@
 <li><p>to allocate up to 10 digital or analog signals, voltage level from 0 V up to 24 VDC</p></li>
 <li><p>Industrial terminal connectors for each sensor, power supply included (signal, Vcc and GND)</p></li>
 <li><p>to get these data from HEINS into your computer over a REST-API</p></li>
-<li><p>to subscribe these data from the HEINS internal MQ-Server with the MQTT-protocol</p></li>
-<li><p>to send these data from HEINS to an external MQ-Server, i.e. cloud service</p></li>
-<li><p>to connect to a network over LAN-Terminal (RJ45) over Ethernet/IP</p></li>
+<li><p>to subscribe these data from the HEINS internal MQ-Server using the MQTT-protocol</p></li>
+<li><p>to publish these data from HEINS to an external MQ-Server, i.e. cloud service</p></li>
+<li><p>to connect to an Ethernet network over LAN-Terminal (RJ45) using TCP/IP</p></li>
 <li><p>Power supply 24 VDC, DC-Jack or industrial terminal connectors</p></li>
 </ul><h2>
 <a name="stay-tuned" class="anchor" href="#stay-tuned"><span class="octicon octicon-link"></span></a>Stay tuned!</h2>
