--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <h1>
 <a name="the-easy-way-to-get-real-world-data-into-your-app" class="anchor" href="#the-easy-way-to-get-real-world-data-into-your-app"><span class="octicon octicon-link"></span></a>The easy way to get real world data into your app</h1>
 
+<p><br></p>
+
 <h2>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting started</h2>
 
@@ -50,6 +52,11 @@
 <li>Power on</li>
 <li>Send a REST-API-request or subscribe to the HEINS internal MQ-Server</li>
 </ol><p>Done! Now you can start creating your own awesome app!</p>
+
+<h2>
+<a name="vision" class="anchor" href="#vision"><span class="octicon octicon-link"></span></a>Vision</h2>
+
+<p>Our vision is to give software developers an easy device in their hands so that can connect their apps to the real world in a very easy way.</p>
 
 <h2>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
@@ -65,6 +72,21 @@
 <li><p>to connect to an Ethernet network over LAN-Terminal (RJ45) using TCP/IP</p></li>
 <li><p>Power supply 24 VDC, DC-Jack or industrial terminal connectors</p></li>
 </ul><h2>
+<a name="free-open-source-project" class="anchor" href="#free-open-source-project"><span class="octicon octicon-link"></span></a>Free Open Source Project</h2>
+
+<p>HEINS is an Free Open Source Project. That means, that both the hardware and the core-software are Free Open Source (like MIT-Licence). </p>
+
+<h2>
+<a name="our-team" class="anchor" href="#our-team"><span class="octicon octicon-link"></span></a>Our Team</h2>
+
+<p>We are an european team of hardware designers, software frontend and backend developers, graphic designers, marketing guys interested in doing cool stuff.</p>
+
+<h2>
+<a name="contribution" class="anchor" href="#contribution"><span class="octicon octicon-link"></span></a>Contribution</h2>
+
+<p>If your like to contribute to the HEINS-project please get in contact.</p>
+
+<h2>
 <a name="stay-tuned" class="anchor" href="#stay-tuned"><span class="octicon octicon-link"></span></a>Stay tuned!</h2>
       </section>
 
