Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h2>
 <a name="vision" class="anchor" href="#vision"><span class="octicon octicon-link"></span></a>Vision</h2>
 
-<p>Our vision is to give software developers an easy device in their hands so that can connect their apps to the real world in a very easy way.</p>
+<p>Our vision is to give software developers an easy device in their hands so they can connect their apps to the real world in a very easy way.</p>
 
 <h2>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
@@ -79,7 +79,7 @@
 <h2>
 <a name="our-team" class="anchor" href="#our-team"><span class="octicon octicon-link"></span></a>Our Team</h2>
 
-<p>We are an european team of hardware designers, software frontend and backend developers, graphic designers, marketing guys interested in doing cool stuff.</p>
+<p>We are an european team of hardware designers, software frontend and backend developers, graphic designers and  marketing guys interested in doing cool stuff for the Internet of Things..</p>
 
 <h2>
 <a name="contribution" class="anchor" href="#contribution"><span class="octicon octicon-link"></span></a>Contribution</h2>
