Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <h1>
 <a name="the-easy-way-to-get-real-world-data-into-your-app" class="anchor" href="#the-easy-way-to-get-real-world-data-into-your-app"><span class="octicon octicon-link"></span></a>The easy way to get real world data into your app</h1>
 
-<p><img src="www.teiresias.info/heins/heins.png" alt=""></p>
+<p><br></p>
+
+<p><img src="http://www.teiresias.info/heins/heins.png" alt=""></p>
 
 <h2>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting started</h2>
