Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@
 
 <p>If your like to contribute to the HEINS-project please get in contact.</p>
 
+<p>Google Groups: groups.google.com/d/forum/heins_io
+Mailinglist: <a href="mailto:heins_io@googlegroups.com">heins_io@googlegroups.com</a></p>
+
+<h2>
+<a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
+
+<p><a href="http://www.heins.io">www.heins.io</a>
+Twitter: @heins_io
+Email: tbd</p>
+
+<h2>
+<a name="imprint" class="anchor" href="#imprint"><span class="octicon octicon-link"></span></a>Imprint</h2>
+
+<p>HEINS I/O-Hardware Open Source Project
+c/o Stefan Hupe
+Lokstedter Damm 18
+D-22453 Hamburg
+Email: tbd</p>
+
 <h2>
 <a name="stay-tuned" class="anchor" href="#stay-tuned"><span class="octicon octicon-link"></span></a>Stay tuned!</h2>
       </section>
