Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -88,23 +88,24 @@
 
 <p>If your like to contribute to the HEINS-project please get in contact.</p>
 
-<p>Google Groups: groups.google.com/d/forum/heins_io
+<p>Google Groups: <a href="groups.google.com/d/forum/heins_io">groups.google.com/d/forum/heins_io</a> <br>
 Mailinglist: <a href="mailto:heins_io@googlegroups.com">heins_io@googlegroups.com</a></p>
 
 <h2>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
 
-<p><a href="http://www.heins.io">www.heins.io</a>
-Twitter: @heins_io
-Email: tbd</p>
+<p><a href="http://www.heins.io">www.heins.io</a> <br>
+Twitter: <a href="www.twitter.com/heins_io">@heins_io</a> <br>
+Email: tbd <br>
+Videos: <a href="https://vimeo.com/channels/706637">Vimeo Channel: heins.io</a></p>
 
 <h2>
 <a name="imprint" class="anchor" href="#imprint"><span class="octicon octicon-link"></span></a>Imprint</h2>
 
-<p>HEINS I/O-Hardware Open Source Project
-c/o Stefan Hupe
-Lokstedter Damm 18
-D-22453 Hamburg
+<p>HEINS I/O-Hardware Open Source Project <br>
+c/o Stefan Hupe <br>
+Lokstedter Damm 18 <br>
+D-22453 Hamburg <br>
 Email: tbd</p>
 
 <h2>
