Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 Mailinglist: <a href="mailto:heins_io@googlegroups.com">heins_io@googlegroups.com</a></p>
 
 <h2>
+<a name="newsletter" class="anchor" href="#newsletter"><span class="octicon octicon-link"></span></a>Newsletter</h2>
+
+<h2>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
 
 <p><a href="http://www.heins.io">www.heins.io</a> <br>
