Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 <li><p>to connect to an Ethernet network over LAN-Terminal (RJ45) using TCP/IP</p></li>
 <li><p>Power supply 24 VDC, DC-Jack or industrial terminal connectors</p></li>
 </ul><h2>
+<a name="use-cases" class="anchor" href="#use-cases"><span class="octicon octicon-link"></span></a>Use Cases</h2>
+
+<p>... tdb ...</p>
+
+<h2>
 <a name="free-open-source-project" class="anchor" href="#free-open-source-project"><span class="octicon octicon-link"></span></a>Free Open Source Project</h2>
 
 <p>HEINS is an Free Open Source Project. That means, that both the hardware and the core-software are Free Open Source (like MIT-Licence). </p>
@@ -88,19 +93,21 @@
 
 <p>If your like to contribute to the HEINS-project please get in contact.</p>
 
-<p>Google Groups: <a href="groups.google.com/d/forum/heins_io">groups.google.com/d/forum/heins_io</a> <br>
+<p>Github: <a href="www.github.com/heins">www.github.com/heins</a>
+Google Groups: <a href="groups.google.com/d/forum/heins_io">groups.google.com/d/forum/heins_io</a> <br>
 Mailinglist: <a href="mailto:heins_io@googlegroups.com">heins_io@googlegroups.com</a></p>
 
 <h2>
 <a name="newsletter" class="anchor" href="#newsletter"><span class="octicon octicon-link"></span></a>Newsletter</h2>
 
+<p>... tdb ...</p>
 
 <h2>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
 
 <p><a href="http://www.heins.io">www.heins.io</a> <br>
 Twitter: <a href="www.twitter.com/heins_io">@heins_io</a> <br>
-Email: tbd <br>
+Email: <a href="mailto:info@heins.io">info@heins.io</a><br>
 Videos: <a href="https://vimeo.com/channels/706637">Vimeo Channel: heins.io</a></p>
 
 <h2>
@@ -110,7 +117,7 @@ Videos: <a href="https://vimeo.com/channels/706637">Vimeo Channel: heins.io</a><
 c/o Stefan Hupe <br>
 Lokstedter Damm 18 <br>
 D-22453 Hamburg <br>
-Email: tbd</p>
+Email: <a href="mailto:stefan@heins.io">stefan@heins.io</a></p>
 
 <h2>
 <a name="stay-tuned" class="anchor" href="#stay-tuned"><span class="octicon octicon-link"></span></a>Stay tuned!</h2>
