--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Heins.github.io by heins</title>
+    <title>HEINS by heins</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -28,44 +28,135 @@
 
       <section>
         <div id="title">
-          <h1>Heins.github.io</h1>
-          <p>HEINS.IO</p>
+          <h1>HEINS</h1>
+          <p>I/O-Hardware for the Internet of Things</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/heins">heins</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a name="the-easy-way-to-get-real-world-data-into-your-app" class="anchor" href="#the-easy-way-to-get-real-world-data-into-your-app"><span class="octicon octicon-link"></span></a>The easy way to get real world data into your app</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p><br></p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p><img src="http://www.teiresias.info/heins/heins.png" alt=""></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h2>
+<a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting started</h2>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<ol>
+<li>Plug your sensor wires into HEINS</li>
+<li>Connect HEINS over Ethernet to your computer.</li>
+<li>Power on</li>
+<li>Send a REST-API-request or subscribe to the HEINS internal MQ-Server</li>
+</ol><p>Done! Now you can start creating your own awesome app!</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h2>
+<a name="vision" class="anchor" href="#vision"><span class="octicon octicon-link"></span></a>Vision</h2>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>Our vision is to give software developers an easy device in their hands so they can connect their apps to the real world in a very easy way.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>HEINS - Small I/O-Device under Open Hardware licence </p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li><p>to allocate up to 10 digital or analog signals, voltage level from 0 V up to 24 VDC</p></li>
+<li><p>Industrial terminal connectors for each sensor, power supply included (signal, Vcc and GND)</p></li>
+<li><p>to get these data from HEINS into your computer over a REST-API</p></li>
+<li><p>to subscribe these data from the HEINS internal MQ-Server using the MQTT-protocol</p></li>
+<li><p>to publish these data from HEINS to an external MQ-Server, i.e. cloud service</p></li>
+<li><p>to connect to an Ethernet network over LAN-Terminal (RJ45) using TCP/IP</p></li>
+<li><p>Power supply 24 VDC, DC-Jack or industrial terminal connectors</p></li>
+</ul><h2>
+<a name="use-cases" class="anchor" href="#use-cases"><span class="octicon octicon-link"></span></a>Use Cases</h2>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>... tbd ...</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h2>
+<a name="do-you-want-to-know-more" class="anchor" href="#do-you-want-to-know-more"><span class="octicon octicon-link"></span></a>Do you want to know more?</h2>
+
+<p>Join our newsletter and stay updated:</p>
+
+
+
+<p></p>
+
+
+#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+<div>
+
+<h2>
+<a name="join-our-newsletter-and-stay-updated" class="anchor" href="#join-our-newsletter-and-stay-updated"><span class="octicon octicon-link"></span></a>Join our newsletter and stay updated</h2>
+<div>* indicates required</div>
+<div>
+Email Address  *
+
+</div>
+
+<div>
+First Name 
+</div>
+
+<div>
+Last Name 
+</div>
+
+<div>
+<div></div>
+<div></div>
+</div>    
+<div></div>
+<div></div>
+
+</div>
+
+
+
+<h2>
+<a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
+
+<p><a href="http://www.heins.io">www.heins.io</a> <br>
+Email: <a href="mailto:info@heins.io">info@heins.io</a> <br>
+Twitter: <a href="www.twitter.com/heins_io">@heins_io</a> <br></p>
+
+<h2>
+<a name="stay-tuned" class="anchor" href="#stay-tuned"><span class="octicon octicon-link"></span></a>Stay tuned!</h2>
+
+<p><br></p>
+
+<hr><h2>
+<a name="free-open-source-project" class="anchor" href="#free-open-source-project"><span class="octicon octicon-link"></span></a>Free Open Source Project</h2>
+
+<p>HEINS is an Free Open Source Project. That means, that both the hardware and the core-software are Free Open Source (like MIT-Licence). </p>
+
+<h2>
+<a name="our-team" class="anchor" href="#our-team"><span class="octicon octicon-link"></span></a>Our Team</h2>
+
+<p>We are an european team of hardware designers, software frontend and backend developers, graphic designers and  marketing guys interested in doing cool stuff for the Internet of Things..</p>
+
+<h2>
+<a name="contribution" class="anchor" href="#contribution"><span class="octicon octicon-link"></span></a>Contribution</h2>
+
+<p>If your like to contribute to the HEINS-project please get in contact.</p>
+
+<p>Github: <a href="http://www.github.com/heins">www.github.com/heins</a> <br>
+Google Groups: <a href="groups.google.com/d/forum/heins_io">groups.google.com/d/forum/heins_io</a> <br>
+Mailinglist: <a href="mailto:heins_io@googlegroups.com">heins_io@googlegroups.com</a></p>
+
+<hr><h2>
+<a name="imprint" class="anchor" href="#imprint"><span class="octicon octicon-link"></span></a>Imprint</h2>
+
+<p>HEINS I/O-Hardware Open Source Project <br>
+c/o Stefan Hupe <br>
+Lokstedter Damm 18 <br>
+D-22453 Hamburg <br>
+Germany <br>
+Email: <a href="mailto:stefan@heins.io">stefan@heins.io</a></p>
       </section>
 
     </div>
