--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
 </ul><h2>
 <a name="use-cases" class="anchor" href="#use-cases"><span class="octicon octicon-link"></span></a>Use Cases</h2>
 
-<p>... tbd ...</p>
+<ul>
+<li>... case 1 ...</li>
+<li>... case 2 ...</li>
+<li>... case 3 ...</li>
+</ul>
 
 <h2>
 <a name="do-you-want-to-know-more" class="anchor" href="#do-you-want-to-know-more"><span class="octicon octicon-link"></span></a>Do you want to know more?</h2>
