fixes google groups link

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Twitter: <a href="www.twitter.com/heins_io">@heins_io</a> <br></p>
 <p>If your like to contribute to the HEINS-project please get in contact.</p>
 
 <p>Github: <a href="http://www.github.com/heins">www.github.com/heins</a> <br>
-Google Groups: <a href="groups.google.com/d/forum/heins_io">groups.google.com/d/forum/heins_io</a> <br>
+Google Groups: <a href="http://groups.google.com/d/forum/heins_io">groups.google.com/d/forum/heins_io</a> <br>
 Mailinglist: <a href="mailto:heins_io@googlegroups.com">heins_io@googlegroups.com</a></p>
 
 <p><br></p>
