--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 <p><a href="http://www.heins.io">www.heins.io</a> <br>
 Email: <a href="mailto:info@heins.io">info@heins.io</a> <br>
-Twitter: <a href="www.twitter.com/heins_io">@heins_io</a> <br></p>
+Twitter: <a href="http://www.twitter.com/heins_io">@heins_io</a> <br></p>
 
 <h2>
 <a name="stay-tuned" class="anchor" href="#stay-tuned"><span class="octicon octicon-link"></span></a>Stay tuned!</h2>
