--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
 <a name="new-features" class="anchor" href="#new-features"><span class="octicon octicon-link"></span></a>Vote for new Features</h2>
 </h2>
 
-<iframe src="http://crowdranking.com/widgets/t9412g0kNdG1XPm6--which-connection-to-a-wireless-sensor-network-wsn-should-be-integrated.iframe?lang=de&amp;v=1&amp;autoresize=true&amp;frontmedia=false&amp;css=widget_gray" width="222" height="432" style="border-style:none;width:222px;height:432px;background:transparent;overflow:hidden;" frameborder="0" scrolling="no" allowtransparency="true"></iframe><script type="text/javascript" src="http://crowdranking.com/widgets/t9412g0kNdG1XPm6--which-connection-to-a-wireless-sensor-network-wsn-should-be-integrated.js?lang=de&amp;v=1&amp;autoresize=true&amp;frontmedia=false&amp;css=widget_gray"></script></iframe>
+<iframe allowtransparency="true" frameborder="0" height="400" scrolling="no" src="http://crowdranking.com/widgets/t9412g0kNdG1XPm6--which-connection-to-a-wireless-sensor-network-wsn-should-be-integrated.iframe?lang=en&amp;v=1" style="border-style:none;width:222px;height:400px;background:transparent;overflow:hidden;" width="222"></iframe>
+
+<hr><p><br/></p>
+
+<h2>
 <a name="use-cases" class="anchor" href="#use-cases"><span class="octicon octicon-link"></span></a>Use Cases</h2>
 
 <ul>
