--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 <p>HEINS - Small I/O-Device under Open Hardware licence </p>
 
 <ul>
-<li><p>to allocate up to 10 digital or analog signals, voltage level from 0 V up to 24 VDC</p></li>
+<li><p>Allocate up to 10 digital or analog signals, voltage level from 0 V up to 24 VDC</p></li>
 <li><p>Industrial terminal connectors for each sensor, power supply included (signal, Vcc and GND)</p></li>
-<li><p>to get these data from HEINS into your computer over a REST-API</p></li>
-<li><p>to subscribe these data from the HEINS internal MQ-Server using the MQTT-protocol</p></li>
-<li><p>to publish these data from HEINS to an external MQ-Server, i.e. cloud service</p></li>
-<li><p>to connect to an Ethernet network over LAN-Terminal (RJ45) using TCP/IP</p></li>
+<li><p>Get these data from HEINS into your computer over a REST-API</p></li>
+<li><p>Subscribe these data from the HEINS internal MQ-Server using the MQTT-protocol</p></li>
+<li><p>Publish these data from HEINS to an external MQ-Server, i.e. cloud service</p></li>
+<li><p>Connect to an Ethernet network over LAN-Terminal (RJ45) using TCP/IP</p></li>
 <li><p>Power supply 24 VDC, DC-Jack or industrial terminal connectors</p></li>
 </ul>
 
@@ -93,10 +93,13 @@
 <a name="use-cases" class="anchor" href="#use-cases"><span class="octicon octicon-link"></span></a>Use Cases</h2>
 
 <ul>
-<li><p>... case 1 ...</p></li>
-<li><p>... case 2 ...</p></li>
-<li><p>... case 3 ...</p></li>
-<li><p>... case 4 ...</p></li>
+<li><p>Collecting data in industrial processes for KPI analysis</p></li>
+<li><p>Temporary data measurement for post-mortem-analysis</p></li>
+<li><p>Sending data to your cloud service</p></li>
+<li><p>Prototyping of cool Apps for the Internet of Things</p></li>
+<li><p>Smart-Home-Automation</p></li>
+<li><p>Do It Yourself Projects</p></li>
+<li><p>Education in schools or universities</p></li>
 </ul><p><br></p>
 
 <hr><p><br></p>
@@ -157,7 +160,7 @@ Twitter: <a href="http://www.twitter.com/heins_io">@heins_io</a> <br></p>
 <h2>
 <a name="free-open-source-project" class="anchor" href="#free-open-source-project"><span class="octicon octicon-link"></span></a>Free Open Source Project</h2>
 
-<p>HEINS is an Free Open Source Project. That means, that both the hardware and the core-software are Free Open Source (like MIT-Licence). </p>
+<p>HEINS is a non-commercial non-profit Free Open Source Project. That means, that both the hardware and the core-software are Free Open Source (like MIT-Licence). </p>
 
 <h2>
 <a name="our-team" class="anchor" href="#our-team"><span class="octicon octicon-link"></span></a>Our Team</h2>
