--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Twitter: <a href="http://www.twitter.com/heins_io">@heins_io</a> <br></p>
 <h2>
 <a name="contribution" class="anchor" href="#contribution"><span class="octicon octicon-link"></span></a>Contribution</h2>
 
-<p>If your like to contribute to the HEINS-project please get in contact.</p>
+<p>If you like to contribute to the HEINS-project please get in contact.</p>
 
 <p>Github: <a href="http://www.github.com/heins">www.github.com/heins</a> <br>
 Google Groups: <a href="http://groups.google.com/d/forum/heins_io">groups.google.com/d/forum/heins_io</a> <br>
