--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Twitter: <a href="http://www.twitter.com/heins_io">@heins_io</a> <br></p>
 <h2>
 <a name="our-team" class="anchor" href="#our-team"><span class="octicon octicon-link"></span></a>Our Team</h2>
 
-<p>We are an european team of hardware designers, software frontend and backend developers, graphic designers and  marketing guys interested in doing cool stuff for the Internet of Things..</p>
+<p>We are an european team of hardware designers, software frontend and backend developers, graphic designers and  marketing guys interested in doing cool stuff for the Internet of Things.</p>
 
 <h2>
 <a name="contribution" class="anchor" href="#contribution"><span class="octicon octicon-link"></span></a>Contribution</h2>
