--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@ Twitter: <a href="http://www.twitter.com/heins_io">@heins_io</a> <br></p>
 <p>If you like to contribute to the HEINS-project please get in contact.</p>
 
 <p>Github: <a href="http://www.github.com/heins">www.github.com/heins</a> <br>
-Google Groups: <a href="http://groups.google.com/d/forum/heins_io">groups.google.com/d/forum/heins_io</a> <br>
-Mailinglist: <a href="mailto:heins_io@googlegroups.com">heins_io@googlegroups.com</a></p>
+<!-- Google Groups: <a href="http://groups.google.com/d/forum/heins_io">groups.google.com/d/forum/heins_io</a> <br>
+Mailinglist: <a href="mailto:heins_io@googlegroups.com">heins_io@googlegroups.com</a></p> -->
 
 <p><br></p>
 
@@ -185,8 +185,8 @@ Mailinglist: <a href="mailto:heins_io@googlegroups.com">heins_io@googlegroups.co
 
 <p>HEINS I/O-Hardware Open Source Project <br>
 c/o Stefan Hupe <br>
-Lokstedter Damm 18 <br>
-D-22453 Hamburg <br>
+Deelwisch 17<br>
+D-22529 Hamburg <br>
 Germany <br>
 Email: <a href="mailto:stefan@heins.io">stefan@heins.io</a></p>
       </section>
